--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ before_script:
   - psql -c "CREATE USER myuser WITH PASSWORD 'password';" -U postgres
   - psql -c "ALTER USER myuser CREATEDB;" -U postgres
 
+script:
+  - python manage.py test
+
 addons:
   postgresql: "9.6"
 
