--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ chardet==3.0.4
 defusedxml==0.6.0
 Django==2.1.3
 django-storages==1.7.1
+django-widget-tweaks==1.4.5
+djangorestframework==3.9.4
 docutils==0.14
 google-api-core==1.11.1
 google-auth==1.6.3
@@ -18,7 +20,7 @@ gunicorn==19.9.0
 idna==2.8
 jmespath==0.9.4
 oauthlib==3.0.1
-Pillow==6.0.0
+Pillow==5.0.0
 protobuf==3.8.0
 psycopg2-binary==2.8.2
 pyasn1==0.4.5
