--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,13 @@ venv
 
 .idea
 .vscode
+
+### Terraform ###
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+*secret.tfvars
